@@ -4,8 +4,23 @@
 # zplug
 export ZPLUG_HOME="${DOTFILES}/modules/zplug"
 
-# set editor
+# default editor
 export EDITOR='nvim'
 
-# add folders to PATH
+# default browser
+export BROWSER='google-chrome'
+
+# JVM
+export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=512M -Xdebug -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n"
+export LC_ALL=en_US.UTF-8
+export LANG=en_US.UTF-8
+export JAVA_TOOLS_OPTIONS='-Dfile.encoding="UTF-8"'
+
+# Clojure
+export LEIN_SUPPRESS_USER_LEVEL_REPO_WARNINGS=true
+
+# dev
+export DEV_HOME="$HOME/dev"
+
+# PATH
 export PATH="${DOTFILES}/local/bin:${DOTFILES}/bin:/usr/local/bin:${PATH}"
